<resources>
    <string name="app_name">FeedBackMaster</string>
    <string name="profile">PROFILE</string>
    <string name="cellphone">Cellphone</string>
    <string name="validate_number">Validate Number</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="age_group">age group</string>
    <string name="submit">submit</string>
    <string name="_70000000">70000000</string>
    <string name="todo">TODO</string>
    <string name="_25_30">25-30</string>
    <string name="next">next</string>
    <string name="type_answer">type questionnaireAnswer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="truth">true</string>
    <string name="lie">false</string>
    <string name="select_branch">SELECT BRANCH</string>
    <string name="select_department">SELECT DEPARTMENT</string>
    <string name="start_survey">Start Survey</string>
    <string name="enter_your_phone_number">enter your phone number</string>
    <string name="how_old_are_you">how old are you?</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="feedbackmaster">Feedback Master</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="try_again">Try Again</string>
    <string name="trophy">trophy</string>
    <string name="total_surveys_completed_this_month">Surveys Completed This Month :</string>
    <string name="wins">Total Wins</string>
    <string name="thank_you_for_completing_our_survey">Thank You For Completing Our Survey</string>
    <string name="continue_home">CONTINUE</string>
    <string name="network_error_image">network error image</string>
    <string name="cellphone_image">Cellphone image</string>
    <string name="age_view">Age</string>
    <string name="select_branches">Select Branch</string>
    <string name="select_departments">Select Department</string>
    <string name="total_wins">Total Wins :</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="phone">Phone</string>
    <string name="signup_to_continue">signup to continue</string>
    <string name="welcome">Welcome</string>
    <string name="application_name">Application Name</string>
    <string name="continue_text">continue</string>
    <string name="by_continuing_you_agree_to_the_terms_amp_conditions"><![CDATA[By continuing, you agree to the terms & conditions]]></string>
    <string name="load_more">Try Again</string>
    <string name="uploading_your_answers">Uploading your answers...</string>
    <string name="search_survey">search for surveys</string>
    <string name="surveys">surveys</string>
    <string name="profile_nav">profile</string>
    <string name="title_activity_test_main2">TestMain2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="select_categories">Select organisation categories bellow or press continue button start survey</string>
    <string name="welcome_to_feedback_master_surveys">Welcome to Feedback Master Surveys</string>
    <string name="question_icon">Number of questions in survey questionnaire</string>
    <string name="expiry_icon">Expiry date of survey</string>
    <string name="survey_icon">Total respondents of survey</string>
    <string name="tap_to_dismiss">Tap to dismiss</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
