<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profile_card"
    app:cardCornerRadius="10dp"
    style="@style/setup_profile"
    tools:showIn="@layout/activity_main">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/card_content"
        android:layout_width="match_parent"
        android:layout_height="398dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/profile_heading"
            android:layout_width="290dp"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/profile"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="290dp"
            android:layout_height="60dp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_heading">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cellphone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/cellphone"
                android:inputType="phone" />
        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/gender"
            android:layout_width="290dp"
            android:layout_height="40dp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            android:baselineAligned="false"
            android:checkedButton="@+id/first"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout">
            <RadioButton
                android:id="@+id/male"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginEnd="60dp"
                android:layout_marginRight="60dp"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/female"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/female" />
        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button"
            android:layout_width="290dp"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            android:text="@string/submit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.355"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/age_group"
            app:layout_constraintVertical_bias="0.578" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/age_group"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="290dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:hint="@string/age_group"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.387"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gender">

            <AutoCompleteTextView
                android:id="@+id/filled_exposed_dropdown"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:editable="false" />


        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>